[package]
name = "probbenchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bloom-filter-rs = "0.1.0"
bloom-filters = "0.1.2"
bloom_rs = "0.1.0"
bloomfx = "0.1.1"
bitvec = "1.0"
clap = { version = "4.5", features = ["derive"] }
fastbloom = "0.17.0"
generic-bloom = "0.1.0"
libc = "0.2"
rayon = "1.10"
roaring-bloom-filter = "0.2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
